# triaina

./: .clang-format  .clangd.bak  .editorconfig  .gitignore  CMakeLists.txt  README.md  TODO.md  grammar.md  ir.md  main.py  parser.py  parser.tab.cc  simp.md  simpgrammar.md  test.tri
src/: .clangd  resty.hpp
src/ds/: bus.cpp  bus.hpp  cguard.cpp  cguard.hpp  errors.hpp  gate.cpp  gate.hpp  slice.cpp  slice.hpp  tree.cpp  tree.hpp  trit.hpp  trivec.cpp  trivec.hpp  types.hpp  vectors.cpp  vectors.hpp  width.cpp  width.hpp
src/grammar/: lexer.l  parser.y
src/parser/: .clang-format  .clangd  CMakeLists.txt  ast.hpp  ast_filter.hpp  driver.cpp  driver.hpp  dump.hpp  lex_bridge.cpp  main.cpp  parser.hpp  visitor.hpp
src/parser/ast/: arena.hpp  ast.cpp  ast.hpp  dump.hpp  nodes.hpp
src/parser/grammar/: lexer.l  parser.y
src/parser/testsnips/: chain_override.tri  full_mix.tri  if_elif.tri  list_expr.tri  literal_trits.tri  mixed_scope.tri  slice_braccess.tri
src/runtime/: api.hpp  ids.hpp  main.cpp  runtime.hpp  symbol.hpp
test/: CMakeLists.txt  resty_test.cpp
test/ds/: gate_test.cpp  tree_test.cpp  trit_test.cpp  trivec_test.cpp
testsnips/: atom_misc.tri  cat_percent.tri  cell_override.tri  chain_basic.tri  chain_override.tri  full_mix.tri  func_basic.tri  func_cells.tri  gate_arms.tri  gate_wide.tri  lambda_atom.tri  memop_unary.tri  scope_decls.tri  slice_braccess.tri  var_init.tri  while_loops.tri
